force-app/main/default/objects/Partner_Notice__c/Partner_Notice__c.object-meta.xml
<CustomObject>
    <label>Partner Notice</label>
    <nameField>
        <displayFormat>N-{YY}{MM}{DD}{0000}</displayFormat>
        <label>Notice No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Notice</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>