force-app/main/default/objects/Partner_Notice__c/fields/Active_InActive__c.field-meta.xml
<CustomField>
    <fullName>Active_InActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active/InActive</label>
    <type>Checkbox</type>
</CustomField>