force-app/main/default/objects/Partner_Notice__c/fields/Email_Send_Count__c.field-meta.xml
<CustomField>
    <fullName>Email_Send_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>이메일 전송 횟수</description>
    <label>Email Send Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>