force-app/main/default/objects/Partner_Notice__c/fields/Email_Send_Subject__c.field-meta.xml
<CustomField>
    <fullName>Email_Send_Subject__c</fullName>
    <description>이메일 전송 제목</description>
    <label>Email Send Subject</label>
    <length>200</length>
    <type>Text</type>
</CustomField>