force-app/main/default/objects/Partner_Notice__c/fields/Last_Email_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Email_Sent_Date__c</fullName>
    <description>최근 이메일 전송일자</description>
    <label>Last Email Sent Date</label>
    <type>DateTime</type>
</CustomField>