force-app/main/default/objects/Partner_Notice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>